--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+.error {
+  color: red;
+  
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -36,3 +42,5 @@
     transform: rotate(360deg);
   }
 }
+
+
